# py-monocle2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: tutorial_hsmm.ipynb  tutorial_olsson.ipynb  tutorial_pancreas.ipynb  tutorial_quickstart_paul15.ipynb
monocle2_py/: __init__.py  monocle.py  plotting.py
tests/: test_cluster_cells.py  test_clustering_and_api.py  test_ddrtree.py  test_delaunay_mst.py  test_differential.py  test_edge_cases_and_plotting.py  test_gene_models.py  test_preprocessing.py  test_pseudotime_scale.py  test_reduction_methods.py  test_root_selection.py  test_trajectory.py
